--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk:
 
 branches:
   only:
-    - manju
+    - manju # 해당하는 브랜치
 
 # Travis CI 서버의 Home
 cache:
@@ -17,7 +17,7 @@ script: "./gradlew clean build"
 before_install:
   - chmod +x gradlew
 
-before_deploy:
+before_deploy: # deploy 명령어가 실행되기전 수행
   - zip -r test *
   - mkdir -p deploy
   - mv test.zip deploy/test.zip
@@ -26,14 +26,26 @@ deploy:
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
-    bucket: manju-issue-test # S3 버킷
+    bucket: manju-issue-test # S3 버킷 명칭
     region: ap-northeast-2
     skip_cleanup: true
     acl: private # zip 파일 접근을 private로
     local_dir: deploy # before_deploy에서 생성한 디렉토리
     wait-until-deployed: true
-    on:
+    on: # S3 전송을 위한 명령어
       all_branches: true
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+
+    bucket: manju-issue-test
+    key: test.zip
+
+    bundle_type: zip # 압축 확장자
+    application: webservice-test
+    deployment_group: webservice-group
+    region: ap-northeast-2
+    wait-until-deployed: true
 
 # CI 실행 완료시 메일로 알람
 notifications:
