--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,13 @@ before_install:
   - chmod +x gradlew
 
 before_deploy: # deploy 명령어가 실행되기전 수행
-  - zip -r test *
-  - mkdir -p deploy
-  - mv test.zip deploy/test.zip
+  - mkdir -p before-deploy # zip에 포함시킬 파일들ㅇ르 담을 디렉토리 생성
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy # before-deploy로 이동후 전체 압축
+  - cd ../ && mkdir -p deploy # 상위 디렉토리로 이동 후 deploy 디렉토리 생성
+  - mv before-deploy/before-deploy.zip deploy/webservice.zip
 
 deploy:
   - provider: s3
